# metagoflow-data-products-ro-crate

./: .gitignore  .gitmodules  README.md  README.napb  code_to_ro-crate  code_to_s3store_short  create-ro-crate.py  pyproject.toml  ro-crate-config.yaml  ro-crate-metadata.json  ro-crate-metadata.json-template  ro-crate-preview.html
emo-bon-ro-crate-repository/: EMOBON00239_upload.sh
emo-bon-ro-crate-repository/.dvc/: config
emo-bon-ro-crate-repository/EMOBON00001-ro-crate/: ro-crate-metadata.json  ro-crate-preview.html
emo-bon-ro-crate-repository/EMOBON00084-ro-crate/: ro-crate-metadata.json  ro-crate-preview.html
emo-bon-ro-crate-repository/EMOBON00085-ro-crate/: ro-crate-metadata.json  ro-crate-preview.html
emo-bon-ro-crate-repository/EMOBON00088-ro-crate/: ro-crate-metadata.json  ro-crate-preview.html
emo-bon-ro-crate-repository/EMOBON00089-ro-crate/: ro-crate-metadata.json  ro-crate-preview.html
ro-crates-examples/: EMOBON00224_upload.sh
scratch/: README.md  create-ro-crate_prod.py  create-ro-crate_seq.py
test-example/: EMOBON00001-MetaGOflow-Data-Products.tar.bz2  README.md  example-ro-crate-metadata.json  result.json  ro-crate-metadata.json
utils/: DVC_download_from_S3_endpoint.py  arup_archive.py  bash-loop.sh  biological-replicates.py  biological_replicates.py  build_sample_table_for_README.py  compress_data.py  convert_metadata_json_to_RDF_turtle_triples.py  create-ghost-archives.py  get_refcode_from_run_id.py  get_run_id_from_source_mat_id.py  install_arup_container.sh  inventory_batch_samples.py  prepare_data.py  purge-s3-objects.py  run-arup.sh  technical_replicates.py  utils.py
(+164 files in other folders)
